# tap-adjust

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
tap_adjust/: __init__.py  model.py  streams.py  tap.py
test/: conftest.py  starndard_tests.py  test_core.py
