[tool.poetry]
name = "tap-adjust"
version = "0.0.1"
description = "`tap-adjust` is a Singer tap for Adjust, built with the Meltano SDK for Singer Taps."
authors = ["Edgar Ramírez"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
singer-sdk = "==0.22.0"
python-dateutil = "==2.8.2"
cryptography = "^37.0.4"
pydantic = "^1.10.6"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_adjust"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-adjust = 'tap_adjust.tap:TapAdjust.cli'

[tool.pytest.ini_options]
pythonpath = [
  "."
]
